Heroku deployment test

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,9 +18,10 @@
         NHS.UK wagtail and frontend test
       </h1>
 
+      <h2>Pages</h2>
       <ul>
         <li>
-          <a href="/docs">how to guides and page templates</a>
+          <a href="#">page title</a>
         </li>
       </ul>
 
