Added behind the headline pages

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,7 +3,7 @@
 
 <!-- Set the page title inside this block -->
 {% block pageTitle %}
-  NHS.UK wagtail and frontend test
+  Wagtail frontend test
 {% endblock %}
 
 <!-- Breadcrumb goes inside this block -->
@@ -15,13 +15,21 @@
     <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
-        NHS.UK wagtail and frontend test
+        Wagtail frontend test
       </h1>
 
       <h2>Pages</h2>
+
+      <h3>Behing the headlines</h3>
       <ul>
         <li>
-          <a href="#">page title</a>
+          <a href="/pages/Behind_the_Headlines_Section_HomePage">Behind_the_Headlines_Section_HomePage</a>
+        </li>
+        <li>
+          <a href="/pages/Behind_the_Headlines_Page">Behind_the_Headlines_Page</a>
+        </li>
+        <li>
+          <a href="/pages/Behind_the_Headlines_Category_Page">Behind_the_Headlines_Category_Page</a>
         </li>
       </ul>
 
