--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -8,3 +8,11 @@
 ///////////////////////////////////////////
 // Add your custom CSS/Sass styles below... 
 ///////////////////////////////////////////
+
+.nhsuk-list--border {
+  li {
+    @include top-and-bottom;
+    border-bottom: 1px solid $color_nhsuk-grey-4;
+    padding: nhsuk-spacing(2) nhsuk-spacing(0) nhsuk-spacing(3);
+  }
+}
