--- a/app/views/pages/Behind_the_Headlines_Category_Page.html
+++ b/app/views/pages/Behind_the_Headlines_Category_Page.html
@@ -13,14 +13,31 @@
 
 {% block content %}
   <div class="nhsuk-grid-row">
-
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>
-        Diabetes news
-      </h1>
+      <div class="nhsuk-page-heading">
 
-      <p class="nhsuk-body-l">Your guide to the diabetes science that makes the news.</p>
+        <h1>
+          Diabetes news
+        </h1>
+
+        <p>Your guide to the diabetes science that makes the news.</p>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-one-quarter">
+      <h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-3">Sort by</h2>
+      <ul class="nhsuk-list--small">
+        <li><a href="?order=newest">Newest first</a></li>
+        <li><a href="?order=oldest">Oldest first</a></li>       
+      </ul>
+    </div>
+
+    <div class="nhsuk-grid-column-three-quarters">
 
       <ul class="nhsuk-list nhsuk-list--border">                
         <li>
