--- a/app/views/pages/Behind_the_Headlines_Section_HomePage.html
+++ b/app/views/pages/Behind_the_Headlines_Section_HomePage.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/layout-nhsuk.html' %}
 
 {% block pageTitle %}
-  Behind_the_Headlines_Category_Page
+  Behind_the_Headlines_Section_HomePage
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,12 +13,234 @@
 
 {% block content %}
   <div class="nhsuk-grid-row">
-
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>
-        Behind_the_Headlines_Category_Page
-      </h1>
+      <div class="nhsuk-page-heading">
+
+        <h1>
+          Behind the Headlines
+        </h1>
+
+        <p>Your guide to the science that makes the news.</p>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-one-quarter">
+      <h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-3">Categories</h2>
+      <ul class="nhsuk-list--small">            
+          <li><a href="/news/cancer/">Cancer</a></li>
+          
+          <li><a href="/news/genetics-and-stem-cells/">Genetics and stem cells</a></li>
+          
+          <li><a href="/news/food-and-diet/">Food and diet</a></li>
+          
+          <li><a href="/news/obesity/">Obesity</a></li>
+          
+          <li><a href="/news/neurology/">Neurology</a></li>
+          
+          <li><a href="/news/lifestyle-and-exercise/">Lifestyle and exercise</a></li>
+          
+          <li><a href="/news/older-people/">Older people</a></li>
+          
+          <li><a href="/news/heart-and-lungs/">Heart and lungs</a></li>
+          
+          <li><a href="/news/medication/">Medication</a></li>
+          
+          <li><a href="/news/pregnancy-and-child/">Pregnancy and child</a></li>
+          
+          <li><a href="/news/mental-health/">Mental health</a></li>
+          
+          <li><a href="/news/medical-practice/">Medical practice</a></li>
+          
+          <li><a href="/news/diabetes/">Diabetes</a></li>
+          
+      </ul>
+    </div>
+
+    <div class="nhsuk-grid-column-three-quarters">
+
+      <ul class="nhsuk-list nhsuk-list--border">                
+        <li>
+            <a href="/news/diabetes/vegan-diet-helps-people-better-manage-type-2-diabetes/">Vegan diet 'helps people better manage type 2 diabetes'</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Wednesday  October  31  2018
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/no-proof-walnuts-prevent-diabetes/">No proof walnuts prevent diabetes</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Monday  July  2  2018
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/your-toothpaste-probably-wont-give-you-type-2-diabetes/">Your toothpaste probably won't give you type 2 diabetes</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Friday  June  22  2018
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/type-1-diabetes-stabilises-after-7-years/">Type 1 diabetes 'stabilises' after 7 years</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Monday  June  11  2018
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/are-there-actually-5-types-diabetes/">Are there actually 5 types of diabetes?</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Friday  March  2  2018
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/going-vegan-may-help-prevent-diabetes-overweight-people/">Going vegan may help prevent diabetes in overweight people</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Thursday  February  15  2018
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/weight-management-may-reduce-need-type-2-diabetes-medication/">Weight management may reduce the need for type 2 diabetes medication</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Friday  January  12  2018
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/radical-low-calorie-diet-may-help-reverse-type-2-diabetes/">'Radical' low-calorie diet may help reverse type 2 diabetes</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Wednesday  December  6  2017
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/some-type-1-diabetes-cases-adults-misdiagnosed-type-2/">Some type 1 diabetes cases in adults misdiagnosed as type 2</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Friday  December  1  2017
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/workplace-bullying-and-violence-risk-factors-type-2-diabetes/">Workplace bullying and violence 'risk factors' for type 2 diabetes</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Tuesday  November  14  2017
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/vitamin-d-may-help-reduce-type-1-diabetes-risk-susceptible-children/">Vitamin D may help reduce type 1 diabetes risk in susceptible children</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Wednesday  October  25  2017
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/people-type-2-diabetes-should-save-carbs-last-study-claims/">People with type 2 diabetes should 'save carbs for last', study claims</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Monday  October  2  2017
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/more-people-need-know-type-2-diabetes-reversible-argues-report/">'More people need to know type 2 diabetes is reversible' argues report</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Thursday  September  14  2017
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/reports-that-frequent-drinking-prevents-diabetes-are-inaccurate/">Reports that frequent drinking prevents diabetes are inaccurate</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Friday  July  28  2017
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/childrens-screen-time-linked-to-diabetes-risk-factors/">Children's screen time linked to diabetes risk factors</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Tuesday  March  14  2017
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/fasting-diet-may-help-regenerate-a-diabetic-pancreas/">Fasting diet may help regenerate a diabetic pancreas</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Friday  February  24  2017
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/claim-high-fat-diets-can-prevent-diabetes-unproven/">Claim high-fat diets can prevent diabetes 'unproven'</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Monday  December  12  2016
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/fat-storage-problems-may-increase-diabetes-risk/">Fat storage problems may increase diabetes risk </a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Thursday  November  17  2016
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/sweetened-drinks-including-diet-drinks-may-raise-diabetes-risk/">Sweetened drinks, including diet drinks, may raise diabetes risk </a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Friday  October  21  2016
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/a-10-minute-walk-after-a-meal-good-for-diabetes/">A 10-minute walk after a meal 'good for diabetes'</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Tuesday  October  18  2016
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/could-a-very-low-calorie-diet-cure-type-2-diabetes/">Could a very low calorie diet 'cure' type 2 diabetes?</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Tuesday  March  22  2016
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/a-potato-rich-diet-before-pregnancy-could-up-diabetes-risk/">A potato-rich diet before pregnancy could up diabetes risk</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Wednesday  January  13  2016
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/remixed-skin-cells-could-lead-to-new-diabetes-treatments/">'Remixed' skin cells could lead to new diabetes treatments </a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Thursday  January  7  2016
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/reports-of-an-end-to-daily-diabetes-jabs-are-premature/">Reports of an 'end to daily diabetes jabs' are premature</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Thursday  November  26  2015
+            </p>
+        </li>
+    
+        <li>
+            <a href="/news/diabetes/high-blood-pressure-does-it-lead-to-diabetes/">High blood pressure: does it lead to diabetes?</a>
+            <p class="nhsuk-body-s nhsuk-u-margin-top-1">
+            Thursday  October  1  2015
+            </p>
+        </li>
+
+      </ul>
+
 
     </div>  
 
