Added pagination to behind the headlines

--- a/app/views/pages/Behind_the_Headlines_Section_HomePage-2.html
+++ b/app/views/pages/Behind_the_Headlines_Section_HomePage-2.html
@@ -207,9 +207,12 @@
       </ul>
 
       {{ pagination({
-        "nextUrl": "/pages/Behind_the_Headlines_Section_HomePage-2",
-        "nextPage": "Page 2 of 84"
+        "previousUrl": "/pages/Behind_the_Headlines_Section_HomePage",
+        "previousPage": "Page 1 of 84",
+        "nextUrl": "#",
+        "nextPage": "Page 3 of 84"
       }) }}
+
 
     </div>  
 
