Headlines side nav - Removed list small and added margin bottom

--- a/app/views/pages/Behind_the_Headlines_Category_Page.html
+++ b/app/views/pages/Behind_the_Headlines_Category_Page.html
@@ -35,15 +35,15 @@
   </div>
 
   <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-one-quarter">
+    <div class="nhsuk-grid-column-one-third">
       <h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-3">Sort by</h2>
-      <ul class="nhsuk-list--small">
+      <ul class="nhsuk-u-margin-bottom-6"> 
         <li><a href="?order=newest">Newest first</a></li>
         <li><a href="?order=oldest">Oldest first</a></li>       
       </ul>
     </div>
 
-    <div class="nhsuk-grid-column-three-quarters">
+    <div class="nhsuk-grid-column-two-thirds">
 
       <ul class="nhsuk-list nhsuk-list--border">                
         <li>
