--- a/app/views/pages/Behind_the_Headlines_Section_HomePage.html
+++ b/app/views/pages/Behind_the_Headlines_Section_HomePage.html
@@ -29,9 +29,9 @@
   </div>
 
   <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-one-quarter">
+    <div class="nhsuk-grid-column-one-third">
       <h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-3">Categories</h2>
-      <ul class="nhsuk-list--small">            
+      <ul class="nhsuk-u-margin-bottom-6">          
           <li><a href="/pages/Behind_the_Headlines_Category_Page">Cancer</a></li>
           
           <li><a href="/pages/Behind_the_Headlines_Category_Page">Genetics and stem cells</a></li>
@@ -60,7 +60,7 @@
       </ul>
     </div>
 
-    <div class="nhsuk-grid-column-three-quarters">
+    <div class="nhsuk-grid-column-two-thirds">
 
       <ul class="nhsuk-list nhsuk-list--border">                
         <li>
