Updated common health questions

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,31 +18,31 @@
         Wagtail frontend test
       </h1>
 
-      <h2>Behind the headlines</h2>
+      <h2 class="nhsuk-heading-m">Behind the headlines</h2>
 
       <ul>
         <li>
           <a href="/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage">Behind_the_Headlines_Section_HomePage</a>
         </li>
         <li>
-          <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Behind_the_Headlines_Page</a>
+          <a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Behind_the_Headlines_Category_Page</a>
         </li>
         <li>
-          <a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Behind_the_Headlines_Category_Page</a>
+          <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Behind_the_Headlines_Page</a>
         </li>
       </ul>
 
-      <h2>Common health questions</h2>
+      <h2 class="nhsuk-heading-m">Common health questions</h2>
       
       <ul>
-        <li>
-          <a href="/pages/common_health_questions/CHQ_Question_Page__desktop">CHQ_Question_Page__desktop</a>
-        </li>
         <li>
           <a href="/pages/common_health_questions/CHQ_Section_HomePage__desktop">CHQ_Section_HomePage__desktop</a>
         </li>
         <li>
           <a href="/pages/common_health_questions/CHQ_Topic_Page__desktop">CHQ_Topic_Page__desktop</a>
+        </li>
+        <li>
+          <a href="/pages/common_health_questions/CHQ_Question_Page__desktop">CHQ_Question_Page__desktop</a>
         </li>
       </ul>
 
