--- a/app/views/pages/common_health_questions/CHQ_Question_Page__desktop.html
+++ b/app/views/pages/common_health_questions/CHQ_Question_Page__desktop.html
@@ -70,6 +70,12 @@
 
       </section>
 
+      {{ backLink({
+        "href": "/pages/common_health_questions/CHQ_Topic_Page__desktop",
+        "text": "Back to Pregnancy"
+      }) }}
+
+
       {{ reviewDate({
         "lastReview": "12 February 2017",
         "nextReview": "1 February 2020"
