--- a/app/views/pages/common_health_questions/CHQ_Topic_Page__desktop.html
+++ b/app/views/pages/common_health_questions/CHQ_Topic_Page__desktop.html
@@ -25,9 +25,9 @@
           Pregnancy
         </h1>
 
-        <ul>
+        <ul class="nhsuk-list">
             
-                <li><a href="/pages/common_health_questions/CHQ_Topic_Page__desktop">What is preconception care?</a></li>
+                <li><a href="/pages/common_health_questions/CHQ_Question_Page__desktop">What is preconception care?</a></li>
             
                 <li><a href="/common-health-questions/pregnancy/how-can-i-increase-my-chances-of-getting-pregnant/">How can I increase my chances of getting pregnant?</a></li>
             
