--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -26,6 +26,12 @@
   }
 }
 
+.nhsuk-list.nhsuk-list--bigger-margin {
+  li {
+    margin-bottom: nhsuk-spacing(3);
+  }
+}
+
 // H1 margin
 .nhsuk-heading-xl, h1 {
   @include nhsuk-responsive-margin(5, 'bottom', important);
