Updated page layouts

--- a/app/views/pages/behind_the_headlines/Behind_the_Headlines_Page.html
+++ b/app/views/pages/behind_the_headlines/Behind_the_Headlines_Page.html
@@ -22,13 +22,22 @@
 {% endblock %}
 
 {% block content %}
+
   <div class="nhsuk-grid-row">
 
     <div class="nhsuk-grid-column-two-thirds">
 
-        <h1>
-           Vegan diet 'helps people better manage type 2 diabetes'
-        </h1>
+      <h1>
+          Vegan diet 'helps people better manage type 2 diabetes'
+      </h1>
+
+    </div>
+
+  </div>
+
+  <div class="nhsuk-grid-row">
+
+    <div class="nhsuk-grid-column-two-thirds">
 
         <p class="nhsuk-body-s nhsuk-u-secondary-text-color">31 October 2018</p>
 
