--- a/app/views/pages/common_health_questions/CHQ_Question_Page__desktop.html
+++ b/app/views/pages/common_health_questions/CHQ_Question_Page__desktop.html
@@ -29,6 +29,12 @@
         What is preconception care?
       </h1>
 
+    </div>
+  </div>
+
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-two-thirds">
+
       <section id="">
 
         <p>Preconception care is an opportunity for you and your partner to improve your health before you start trying for a baby. A healthcare professional can help you to assess your health, fitness and lifestyle, to identify areas that you may want to improve.</p>
