--- a/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage-2.html
+++ b/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage-2.html
@@ -13,7 +13,7 @@
 
 {% block content %}
   <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full">
+    <div class="nhsuk-grid-column-two-thirds">
 
       <div class="nhsuk-page-heading">
 
