--- a/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage.html
+++ b/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage.html
@@ -13,7 +13,7 @@
 
 {% block content %}
   <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full">
+    <div class="nhsuk-grid-column-two-thirds">
 
         <h1>
           Behind the Headlines
