--- a/app/views/pages/behind_the_headlines/Behind_the_Headlines_Category_Page.html
+++ b/app/views/pages/behind_the_headlines/Behind_the_Headlines_Category_Page.html
@@ -19,7 +19,7 @@
 
 {% block content %}
   <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full">
+    <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
         Diabetes news
