--- a/app/views/pages/behind_the_headlines/Behind_the_Headlines_Category_Page.html
+++ b/app/views/pages/behind_the_headlines/Behind_the_Headlines_Category_Page.html
@@ -46,140 +46,140 @@
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Vegan diet 'helps people better manage type 2 diabetes'</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Wednesday  October  31  2018
+            31 October 2018
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">No proof walnuts prevent diabetes</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Monday  July  2  2018
+            2 July 2018
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Your toothpaste probably won't give you type 2 diabetes</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Friday  June  22  2018
+            22 June 2018
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Type 1 diabetes 'stabilises' after 7 years</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Monday  June  11  2018
+            11 June 2018
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Are there actually 5 types of diabetes?</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Friday  March  2  2018
+            2 March 2018
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Going vegan may help prevent diabetes in overweight people</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Thursday  February  15  2018
+            15 February 2018
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Weight management may reduce the need for type 2 diabetes medication</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Friday  January  12  2018
+            12 January 2018
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">'Radical' low-calorie diet may help reverse type 2 diabetes</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Wednesday  December  6  2017
+            6 December 2017
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Some type 1 diabetes cases in adults misdiagnosed as type 2</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Friday  December  1  2017
+            1 December 2017
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Workplace bullying and violence 'risk factors' for type 2 diabetes</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Tuesday  November  14  2017
+            14 November 2017
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Vitamin D may help reduce type 1 diabetes risk in susceptible children</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Wednesday  October  25  2017
+            25 October 2017
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">People with type 2 diabetes should 'save carbs for last', study claims</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Monday  October  2  2017
+            2 October 2017
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">'More people need to know type 2 diabetes is reversible' argues report</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Thursday  September  14  2017
+            14 September 2017
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Reports that frequent drinking prevents diabetes are inaccurate</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Friday  July  28  2017
+            28 July 2017
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Children's screen time linked to diabetes risk factors</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Tuesday  March  14  2017
+            14 March 2017
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Fasting diet may help regenerate a diabetic pancreas</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Friday  February  24  2017
+            24 February 2017
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Claim high-fat diets can prevent diabetes 'unproven'</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Monday  December  12  2016
+            12 December 2016
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Fat storage problems may increase diabetes risk </a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Thursday  November  17  2016
+            17 November 2016
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Sweetened drinks, including diet drinks, may raise diabetes risk </a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Friday  October  21  2016
+            21 October 2016
             </p>
         </li>
     
         <li>
             <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">A 10-minute walk after a meal 'good for diabetes'</a>
             <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            Tuesday  October  18  2016
+            18 October 2016
             </p>
         </li>
 
